--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,8 +1,8 @@
 ---
 - name: Import the APT repo key (Debian)
   apt_key:
-    keyserver: "{{ apt_key_server }}"
-    id: "{{ apt_key_id }}"
+    url: "{{ repo_key_url }}"
+    state: present
 
 - name: Create the APT repository (Debian)
   apt_repository:
