Fix syntax. Thank you travis.

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,7 +1,7 @@
 ---
 - name: Fix broken apt module for Ubuntu 1604
   apt:
-    name: "{{ package }}"
+    name: "{{ item }}"
     state: present
   with_items:
   - python-simplejson
