fix Ansible 2.8 deprecation warnings
- leaving one warning that will be reverted by Ansible in a future
  release (PR already merged)

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,12 +1,11 @@
 ---
 - name: Fix broken apt module for Ubuntu 16.04
   apt:
-    name: "{{ item }}"
+    name:
+      - python-simplejson
+      - aptitude
+      - apt-transport-https
     state: present
-  with_items:
-  - python-simplejson
-  - aptitude
-  - apt-transport-https
   when: ansible_os_family == 'Debian'
 
 - name: Import the APT repo key (Debian)
