--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,12 +2,13 @@
 # Task Configuration
 - name: Include OS-specific tasks
   include_tasks: "{{ os_tasks }}"
-  with_first_found: 
+  with_first_found:
     - files:
-      - "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
-      - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-      - "{{ ansible_distribution }}.yml"
-      - "{{ ansible_os_family }}.yml"
+        - "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+        - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ ansible_distribution }}.yml"
+        - "{{ ansible_os_family }}.yml"
+      # Ignore Ansible 2.8 deprecation warning, fixed in later release - https://github.com/ansible/ansible/pull/60161
       skip: true
   loop_control:
-    loop_var: os_tasks 
+    loop_var: os_tasks
