--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,10 @@
 ---
 azure_package_name: azure-cli
+azure_version: 2.0.81
+azure_package_version:
+  debian: "{{ azure_version }}-1~{{ ansible_distribution_release }}"
+  # Example: azure-cli-2.0.81-1.el7.x86_64
+  redhat: "{{ azure_version }}-1.el7.x86_64"
 
 repo_key_url: https://packages.microsoft.com/keys/microsoft.asc
 
